<resources>
    <string name="app_name">海宁海图</string>

    <!--更新相关-->
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>

    <string name="haining_title">海宁海图</string>


    <string name="tab1_text">船位</string>
    <string name="tab2_text">商城</string>
    <string name="tab3_text">航海知识库</string>
    <string name="tab4_text">电子海图</string>
    <string name="tab4_text2">船舶资料管理</string>
    <string name="tab5_text">更多</string>

    <!-- 登录页面相关-->
    <string name="username_or_tel_for_login_hint">用户名或手机号</string>
    <string name="password_for_login_hint">密码</string>
    <string name="forget_password">忘记密码？</string>
    <!--限制EditText输入的字符账号-->
    <string name="register_name_digits">
        _0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ
    </string>
    <!--限制EditText输入的字符密码-->
    <string name="register_name_password">
        .0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ
    </string>

    <!--XML文件string-->
    <string name="please_input_pay_password">请输入支付密码</string>
    <string name="please_set_pay_password">请设置支付密码:</string>

    <string name="confirm_password_">确认密码:</string>
    <string name="confirm_id_name">姓名：</string>
    <string name="auto_update_per_minute">每分钟自动更新</string>
    <string name="scan_again">再次扫描</string>
    <string name="scan_result_">扫描结果:</string>
    <string name="reset_gesture_password">重新设置</string>
    <string name="btn_login">登录</string>
    <string name="btn_submit">提交</string>
    <string name="invite_friends_to_download">邀请好友扫描二维码下载汉爵宝</string>
    <string name="please_enter_new_login_password">请输入新登录密码</string>
    <string name="confirm_new_login_password">确认新登录密码</string>
    <string name="please_enter_the_original_password">请输入原登录密码</string>
    <string name="forget_the_pay_password">忘记支付密码</string>
    <string name="forget_the_login_password">忘记登录密码</string>
    <string name="please_enter_new_pay_password">请输入新支付密码</string>
    <string name="confirm_new_pay_password">确认新支付密码</string>
    <string name="please_enter_the_original_pay_password">请输入原支付密码</string>
    <string name="btn_send_validate_code">发送验证码</string>
    <string name="please_input_received_validate_code">请输入收到的验证码:</string>
    <string name="please_input_new_pay_password">请输入新的支付密码:</string>
    <string name="please_confirm_input_new_pay_password">请确认新的支付密码:</string>
    <string name="please_input_account_or_telephone">请输入用户名或者手机号:</string>
    <string name="my_qr_code">我的二维码</string>
    <string name="i_want_buy">我要购买</string>
    <string name="confirm_pay">确认支付</string>
    <string name="safe_validate_tip">请选择其中一种方式进行安全验证</string>
    <string name="please_input_new_login_password">请输入新的登录密码:</string>
    <string name="please_confirm_input_new_login_password">请确认新的登录密码:</string>
    <string name="please_input_safe_email">请输入安全邮箱</string>


    <!--Toast-->
    <string name="network_connection_failed">网络连接失败</string>
    <string name="tip">提示</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="phone_can_not_be_same">手机号码不能相同</string>
    <string name="original_pay_password_can_not_be_null">原支付密码不能为空</string>
    <string name="new_pay_password_can_not_be_null">新支付密码不能为空</string>
    <string name="please_confirm_new_pay_password">请确认新支付密码</string>
    <string name="original_login_password_can_not_be_null">原登录密码不能为空</string>
    <string name="new_login_password_can_not_be_null">新登录密码不能为空</string>
    <string name="please_confirm_new_login_password">请确认新登录密码</string>

    <string name="logined_at_another_place">该账号已在别处登录</string>

    <!--各个页面标题-->
    <string name="title_purchase_agreement">购买协议</string>
    <string name="title_register">注册</string>
    <string name="title_about">关于</string>
    <string name="title_change_bind_phone_number">更改绑定手机号</string>
    <string name="title_change_password">修改密码</string>
    <string name="title_feedback">意见反馈</string>
    <string name="title_change_bind_email">更改绑定邮箱</string>
    <string name="title_change_user_name">修改姓名</string>
    <string name="title_my_order">订单详情</string>\
    <string name="title_my_ship">船舶选择</string>
    <string name="title_inventory">库存详情</string>
    <string name="title_reset_login_password">重置登录密码</string>
    <string name="verification_code">验证码</string>
    <string name="confirm_password">确认密码</string>
    <string name="set_login_password">设置登录密码</string>
    <string name="username">用户名</string>
    <string name="mobilephone">手机号</string>
    <string name="confirm_modify">确认修改</string>
    <string name="order_number">订单编号:</string>
    <string name="order_status">订单状态:</string>
    <string name="submission_date">提交日期:</string>
    <string name="date_generated">生成日期:</string>
    <string name="inventory_number">仓库编号：</string>
    <string name="inventory_status">海图状态：</string>
    <string name="inventory_timet">入仓时间：</string>
    <string name="Sign_out">退出登录</string>
    <string name="chart_time">更新日期:2:22</string>
    <string name="chart_edition">海图版本:</string>
    <string name="title_chart">海图</string>
    <string name="title_chart_update">海图更新</string>
    <string name="title_chart_details">海图详情</string>
    <string name="inventory">船舶名称:haining</string>
    <string name="title_message_center">通知中心</string>
    <string name="title_orderdetails">订单详情</string>


</resources>
