<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    android:orientation="vertical"
    >
    <include layout="@layout/public_title"></include>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_10dp"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_10dp"
            android:padding="@dimen/common_10dp"
            android:text="@string/username"
            android:textSize="@dimen/common_18sp"/>

        <TextView
            android:id="@+id/tv_account_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="@dimen/common_10dp"
            android:padding="@dimen/common_10dp"
            android:textSize="@dimen/common_18sp"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_1dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_10dp"
            android:padding="@dimen/common_10dp"
            android:text="@string/mobilephone"
            android:textSize="@dimen/common_18sp"/>

        <TextView
            android:id="@+id/tv_account_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="@dimen/common_10dp"
            android:padding="@dimen/common_10dp"
            android:textSize="@dimen/common_18sp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_10dp"

        android:background="@color/white_smoke"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/white">

            <TextView
                android:id="@+id/tv_change_password_original"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/common_10dp"
                android:background="@drawable/change_password_original"/>

            <EditText
                android:id="@+id/et_please_input_change_original_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@id/tv_change_password_original"
                android:background="@color/white"
                android:hint="@string/please_enter_the_original_password"
                android:digits="@string/register_name_password"
                android:padding="@dimen/common_10dp"
                android:inputType="textPassword"
                android:textColorHint="@color/athens_gray"/>

        </RelativeLayout>

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/common_1dp"-->
        <!--android:background="@color/white_smoke" />-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/common_1dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_change_password_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/common_10dp"
                android:background="@drawable/change_password_new"/>

            <EditText

                android:id="@+id/et_please_input_new_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@id/tv_change_password_new"
                android:digits="@string/register_name_password"
                android:background="@color/white"
                android:hint="@string/please_enter_new_login_password"
                android:padding="@dimen/common_10dp"
                android:inputType="textPassword"
                android:textColorHint="@color/athens_gray"/>

        </RelativeLayout>

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/common_1dp"-->
        <!--android:background="@color/white_smoke" />-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/common_1dp"
            android:background="@color/white">

            <TextView

                android:id="@+id/tv_change_password_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/common_10dp"
                android:background="@drawable/change_password_confirm"/>

            <EditText
                android:id="@+id/et_confirm_new_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@id/tv_change_password_confirm"
                android:background="@color/white"
                android:hint="@string/confirm_new_login_password"
                android:padding="@dimen/common_10dp"
                android:digits="@string/register_name_password"
                android:inputType="textPassword"

                android:textColorHint="@color/athens_gray"/>

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm_change_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_30dp"
        android:layout_marginRight="@dimen/common_30dp"
        android:layout_marginTop="@dimen/common_30dp"
        android:background="@color/yukon_gold"
        android:text="@string/confirm_modify"

        android:textColor="@color/white"
        android:textSize="@dimen/common_18sp"/>
</LinearLayout>
